# learnopengl

./: CMakeLists.txt  Shader.cpp  Shader.h  compile  glad.c  main copy.cpp  main.cpp  test.txt  vertex_shader.vert
include/: Shader.h  Texture.h
lib/: stb_image.cpp
shaders/: fragment_shader.frag  vertex_shader.vert
src/: Shader.cpp  Texture.cpp
